--- a/source/catalog.html
+++ b/source/catalog.html
@@ -8,17 +8,13 @@
   <body class="page__body">
 
     <header class="main-header">
-      <div class="container">
-        <a href="index.html" class="main-header__trademark primary-trademark">
-          <img src="img/primary-trademark.svg" width="44" height="44" alt="Основной фирменный знак 'Кэт энерджи'.">
+      <div class="main-header__wrapper">
+        <a href="index.html" class="main-header__logo">
+          <img class="main-header__trademark primary-trademark" src="img/primary-trademark.svg" width="44" height="44" alt="Основной фирменный знак 'Кэт энерджи'.">
+          <img class="main-header__trademark secondary-trademark" src="img/secondary-trademark.svg" width="34" height="38" alt="Фирменный знак 'Кэт энерджи' на мобильных устройствах.">
+          <img class="main-header__logo-image logo" src="img/logo.svg" width="101" height="18" alt="Логотип 'Кэт энерджи'.">
         </a>
-        <a href="index.html" class="main-header__trademark secondary-trademark secondary-trademark--active">
-          <img src="img/secondary-trademark.svg" width="34" height="38" alt="Фирменный знак 'Кэт энерджи' на мобильных устройствах.">
-        </a>
-        <a href="index.html" class="main-header__logo-image logo">
-          <img src="img/logo.svg" width="101" height="18" alt="Логотип 'Кэт энерджи'.">
-        </a>
-        <nav class="main-nav">
+        <nav class="main-header__nav main-nav">
           <button class="main-nav__toggle"><span class="visually-hidden">Открыть меню.</span></button>
           <ul class="main-nav__list site-list">
             <li class="site-list__item">
@@ -35,14 +31,16 @@
       </div>
     </header>
 
-    <main class="main-container">
-      <h1 class="main-container__title heading">Каталог продукции</h1>
+    <main class="main-container main-container--secondary">
+      <div class="container">
+        <h1 class="main-container__title main-container__title--catalog heading">Каталог продукции</h1>
+      </div>
 
-      <section class="main-products">
+      <section class="main-container__main-products main-products">
         <div class="container">
           <h2 class="visually-hidden">Основные товары.</h2>
 
-          <ul class="main-products__product-list product-list product-list--primary">
+          <ul class="main-products__product-list product-list-primary">
 
             <li class="product-list__item product-card product-card--primary">
               <img class="product-card__image" src="img/catalog-1.jpg" width="68" height="86" alt="">
@@ -157,21 +155,21 @@
             </li>
 
             <li class="product-list__item product-card product-card--primary product-card--more">
-              <h3 class="product-card__title heading">Показать еще 100500 товаров</h3>
-              <p class="product-card__description">На самом деле вкусов гораздо больше!</p>
+              <h3 class="product-card__title product-card__title--more heading">Показать еще 100500 товаров</h3>
+              <p class="product-card__description product-card__description--more">На самом деле вкусов гораздо больше!</p>
               <a class="product-card__link product-card__link--more button" href="#">Показать все</a>
             </li>
           </ul>
         </div>
       </section>
 
-      <section class="additional-products">
-        <div class="container">
+      <div class="main-container__catalog-wrapper container">
+        <section class="main-container__additional-products additional-products">
           <div class="decor-line">
             <h2 class="additional-products__title heading">Дополнительные товары</h2>
           </div>
 
-          <ul class="additional-products__product-list product-list product-list--secondary">
+          <ul class="additional-products__product-list product-list-secondary">
 
             <li class="product-list__item product-card product-card--secondary">
               <h3 class="product-card__title heading">Сахарозаменитель</h3>
@@ -179,7 +177,7 @@
                 <dt class="product-card__termin">1 упакова (100 г)</dt>
                 <dd class="product-card__description">200 &#8381;</dd>
               </dl>
-              <a class="product-card__link button" href="#">Заказать</a>
+              <a class="product-card__link product-card__link--secondary button" href="#">Заказать</a>
             </li>
 
             <li class="product-list__item product-card product-card--secondary">
@@ -188,7 +186,7 @@
                 <dt class="product-card__termin">5 литров</dt>
                 <dd class="product-card__description">50 &#8381;</dd>
               </dl>
-              <a class="product-card__link button" href="#">Заказать</a>
+              <a class="product-card__link product-card__link--secondary button" href="#">Заказать</a>
             </li>
 
             <li class="product-list__item product-card product-card--secondary">
@@ -197,7 +195,7 @@
                 <dt class="product-card__termin">1 литр</dt>
                 <dd class="product-card__description">100 &#8381;</dd>
               </dl>
-              <a class="product-card__link button" href="#">Заказать</a>
+              <a class="product-card__link product-card__link--secondary button" href="#">Заказать</a>
             </li>
 
             <li class="product-list__item product-card product-card--secondary">
@@ -206,34 +204,31 @@
                 <dt class="product-card__termin">1 упаковка (30 г)</dt>
                 <dd class="product-card__description">300 &#8381;</dd>
               </dl>
-              <a class="product-card__link button" href="#">Заказать</a>
+              <a class="product-card__link product-card__link--secondary button" href="#">Заказать</a>
             </li>
           </ul>
-        </div>
-      </section>
 
-      <section class="special-offer">
-        <div class="container">
+        </section>
+
+        <section class="main-container__special-offer special-offer">
           <h2 class="visually-hidden">Специальное предложение.</h2>
           <p class="special-offer__text">Закажите все и получите чехол для кота в подарок!</p>
-        </div>
-      </section>
+        </section>
+      </div>
 
-      <section class="address">
-        <div class="container">
-          <div class="address__wrapper address__wrapper--secondary">
-            <h2 class="address__title heading">Приглашаем к сотрудничеству дилеров!</h2>
-            <p class="address__text">ул. Большая Конюшенная, д. 19/8 Санкт-Петербург</p>
-          </div>
-          <div class="address__map map">
-            <img class="map__image" src="img/map-image.jpg" width="320" height="362" alt="Карта местоположения компании 'Кэт энерджи'.">
-          </div>
+      <section class="address address--secondary">
+        <div class="address__wrapper container">
+          <h2 class="address__title heading">Приглашаем к сотрудничеству дилеров!</h2>
+          <p class="address__text">ул. Большая Конюшенная, д. 19/8 Санкт-Петербург</p>
+        </div>
+        <div class="address__map map">
+          <img class="map__image" src="img/map-image.jpg" width="320" height="362" alt="Карта местоположения компании 'Кэт энерджи'.">
         </div>
       </section>
     </main>
 
     <footer class="main-footer">
-      <div class="container">
+      <div class="main-footer__wrapper container">
 
         <section class="main-footer__contacts contacts">
           <h2 class="visually-hidden">Контакты.</h2>
