--- a/source/form.html
+++ b/source/form.html
@@ -8,17 +8,13 @@
   <body class="page__body">
 
     <header class="main-header">
-      <div class="container">
-        <a href="index.html" class="main-header__trademark primary-trademark">
-          <img src="img/primary-trademark.svg" width="44" height="44" alt="Основной фирменный знак 'Кэт энерджи'.">
+      <div class="main-header__wrapper">
+        <a href="index.html" class="main-header__logo">
+          <img class="main-header__trademark primary-trademark" src="img/primary-trademark.svg" width="44" height="44" alt="Основной фирменный знак 'Кэт энерджи'.">
+          <img class="main-header__trademark secondary-trademark" src="img/secondary-trademark.svg" width="34" height="38" alt="Фирменный знак 'Кэт энерджи' на мобильных устройствах.">
+          <img class="main-header__logo-image logo" src="img/logo.svg" width="101" height="18" alt="Логотип 'Кэт энерджи'.">
         </a>
-        <a href="index.html" class="main-header__trademark secondary-trademark secondary-trademark--active">
-          <img src="img/secondary-trademark.svg" width="34" height="38" alt="Фирменный знак 'Кэт энерджи' на мобильных устройствах.">
-        </a>
-        <a href="index.html" class="main-header__logo-image logo">
-          <img src="img/logo.svg" width="101" height="18" alt="Логотип 'Кэт энерджи'.">
-        </a>
-        <nav class="main-nav">
+        <nav class="main-header__nav main-nav">
           <button class="main-nav__toggle"><span class="visually-hidden">Открыть меню.</span></button>
           <ul class="main-nav__list site-list">
             <li class="site-list__item">
@@ -35,14 +31,16 @@
       </div>
     </header>
 
-    <main class="main-container">
-      <h1 class="main-container__title heading">Подбор программы</h1>
+    <main class="main-container main-container--secondary">
+      <div class="container">
+        <h1 class="main-container__title main-container__title--form heading">Подбор программы</h1>
+      </div>
 
-      <form class="program-form container" action="https://echo.htmlacademy.ru/" method="post">
-        <div class="container">
+      <form class="program-form" action="https://echo.htmlacademy.ru/" method="post">
+        <div class="program-form__wrapper container">
           <p class="program-form__text">Заполните анкету, и мы подберем программу питания для вашего кота</p>
 
-          <fieldset class="program-form__group">
+          <fieldset class="program-form__group program-form__group--cat-information">
             <legend class="visually-hidden">Основная информация о коте.</legend>
 
             <label class="program-form__label">
@@ -61,7 +59,7 @@
             </label>
           </fieldset>
 
-          <fieldset class="program-form__group">
+          <fieldset class="program-form__group program-form__group--feed-program">
             <legend class="visually-hidden">Программа питания.</legend>
             <ul class="program-form__list radio">
               <li class="radio__item">
@@ -114,7 +112,7 @@
           <fieldset class="program-form__group">
             <legend class="program-form__group-title">Дополнительно</legend>
 
-            <ul class="program-form__list checkbox">
+            <ul class="program-form__list program-form__list--additional checkbox">
               <li class="checkbox__item">
                 <label class="checkbox__label">
                   <input class="checkbox__input visually-hidden" type="checkbox" name="sugar-substitute">
@@ -154,21 +152,19 @@
         </div>
       </form>
 
-      <section class="address">
-        <div class="container">
-          <div class="address__wrapper address__wrapper--secondary">
-            <h2 class="address__title heading">Приглашаем к сотрудничеству дилеров!</h2>
-            <p class="address__text">ул. Большая Конюшенная, д. 19/8 Санкт-Петербург</p>
-          </div>
-          <div class="address__map map">
-            <img class="map__image" src="img/map-image.jpg" width="320" height="362" alt="Карта местоположения компании 'Кэт энерджи'.">
-          </div>
+      <section class="address address--secondary">
+        <div class="address__wrapper container">
+          <h2 class="address__title heading">Приглашаем к сотрудничеству дилеров!</h2>
+          <p class="address__text">ул. Большая Конюшенная, д. 19/8 Санкт-Петербург</p>
+        </div>
+        <div class="address__map map">
+          <img class="map__image" src="img/map-image.jpg" width="320" height="362" alt="Карта местоположения компании 'Кэт энерджи'.">
         </div>
       </section>
     </main>
 
     <footer class="main-footer">
-      <div class="container">
+      <div class="main-footer__wrapper container">
 
         <section class="main-footer__contacts contacts">
           <h2 class="visually-hidden">Контакты.</h2>
